# langchain-google-cloud-sql-mysql-python

./: .coveragerc  .repo-metadata.json  CHANGELOG.md  DEVELOPER.md  README.md  README.rst  integration.cloudbuild.yaml  mypy.ini  pyproject.toml  requirements-3.8.txt  requirements.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  blunderbuss.yml  renovate.json5  sync-repo-settings.yaml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: lint.yml
.kokoro/: build.sh  publish-docs.sh  release.sh  requirements.txt
.kokoro/docs/: common.cfg  docs-presubmit.cfg
.kokoro/release/: common.cfg
docs/: chat_message_history.ipynb  conf.py  document_loader.ipynb  index.rst  vector_store.ipynb
docs/langchain_google_cloud_sql_mysql/: engine.rst  history.rst  loader.rst  vectorstore.rst
samples/: langchain_quick_start.ipynb
src/langchain_google_cloud_sql_mysql/: __init__.py  chat_message_history.py  cloud_sql_engine.py  cloud_sql_mysql_engine.py  doc_loader.py  engine.py  indexes.py  loader.py  mysql_chat_message_history.py  mysql_engine.py  mysql_loader.py  vectorstore.py  version.py
tests/integration/: test_mysql_chat_message_history.py  test_mysql_engine.py  test_mysql_loader.py  test_mysql_vectorstore.py  test_mysql_vectorstore_from_methods.py  test_mysql_vectorstore_index.py  test_mysql_vectorstore_search.py
tests/integration_tests/: test_doc_loader.py
tests/unit/: test_doc2row.py  test_engine.py
