[project]
name = "langchain-google-cloud-sql-mysql"
dynamic = ["version"]
description = "LangChain integrations for Google Cloud SQL for MySQL"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
authors = [
    {name = "Google LLC", email = "googleapis-packages@google.com"}
]
dependencies = [
    "langchain>=0.1.1, <1.0.0",
    "langchain-community>=0.0.18, <1.0.0",
    "SQLAlchemy>=2.0.7, <3.0.0",
    "cloud-sql-python-connector[pymysql]>=1.7.0, <2.0.0"
]

[tool.setuptools.dynamic]
version = {attr = "langchain_google_cloud_sql_mysql.version.__version__"}

[project.urls]
Homepage = "https://github.com/googleapis/langchain-google-cloud-sql-mysql-python"
Repository = "https://github.com/googleapis/langchain-google-cloud-sql-mysql-python.git"
"Bug Tracker" = "https://github.com/googleapis/langchain-google-cloud-sql-mysql-python/issues"
Changelog = "https://github.com/googleapis/langchain-google-cloud-sql-mysql-python/blob/main/CHANGELOG.md"

[project.optional-dependencies]
test = [
    "black[jupyter]==24.2.0",
    "isort==5.13.2",
    "mypy==1.8.0",
    "pytest-asyncio==0.23.5",
    "pytest==8.0.1"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.8"
warn_unused_configs = true

[[tool.mypy.overrides]]
module="google.auth.*"
ignore_missing_imports = true
